fix flickering issue with filter running

--- a/src/App.css
+++ b/src/App.css
@@ -87,3 +87,16 @@
   max-height: 20em;
   overflow: auto;
 }
+
+.dropdown-separator {
+  font-style: italic;
+  text-decoration: underline;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+}
+
+html {
+  overflow: hidden;
+}
